syntax = "proto3";
package transaction;
option go_package = "./proto";

service TransactionService {
  rpc Deposit (DepositRequest) returns (DepositResponse);
}

message DepositRequest {
  int64 wallet_id = 1;
  double amount = 2;
  string idempotency_key = 3;
}

message DepositResponse {
  int64 transaction_id = 1;
  double new_balance = 2;
}
